k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
    namespace: dupontdoku-staging
spec:
    replicas: 1
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 0
            maxSurge: 1
    selector:
        matchLabels:
            app: frontend-deployment
    template:
        metadata:
            labels:
                app: frontend-deployment
        spec:
            automountServiceAccountToken: false
            containers:
                -   name: frontend-deployment
                    image: "rhaversen/dupontdoku-frontend:${GITHUB_SHA}"
                    imagePullPolicy: Always
                    livenessProbe:
                        httpGet:
                            path: /service/livez
                            port: 3000
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    readinessProbe:
                        httpGet:
                            path: /service/readyz
                            port: 3000
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    ports:
                        -   containerPort: 3000
